--- a/templates/login.html
+++ b/templates/login.html
@@ -36,6 +36,11 @@
                 Don't have an account? <a href="{{ url_for('auth.register') }}"
                     class="text-sky-600 hover:underline font-medium">Register here</a>
             </p>
+            <p class="text-center text-sm text-slate-600 mt-2">
+                Are you a Student Body? <a href="{{ url_for('studentbody_auth.body_login') }}"
+                    class="text-sky-600 hover:underline font-medium">Login here</a>
+            </p>
+
         </form>
     </div>
 </div>
